# panopticon

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.devin/: wiki.json
.github/workflows/: ci.yml  release.yml
crates/panopticon-assignment/: Cargo.toml
crates/panopticon-assignment/src/: contract_builder.rs  matcher.rs
crates/panopticon-cli/: Cargo.toml
crates/panopticon-cli/examples/: basic_delegation.rs
crates/panopticon-cli/src/: main.rs  state.rs
crates/panopticon-cli/src/commands/: agent.rs  demo.rs  mod.rs  task.rs
crates/panopticon-cli/tests/: delegation_lifecycle.rs
crates/panopticon-coordination/: Cargo.toml
crates/panopticon-coordination/src/: coordinator.rs  lib.rs  response.rs
crates/panopticon-decomposition/: Cargo.toml
crates/panopticon-decomposition/src/: lib.rs  proposal.rs  strategy.rs  traits.rs
crates/panopticon-ledger/: Cargo.toml
crates/panopticon-ledger/src/: entry.rs  lib.rs  memory.rs  merkle.rs  traits.rs
crates/panopticon-monitoring/: Cargo.toml
crates/panopticon-monitoring/src/: checkpoint.rs  lib.rs  monitor.rs  slo.rs
crates/panopticon-optimizer/: Cargo.toml
crates/panopticon-optimizer/benches/: pareto.rs
crates/panopticon-optimizer/src/: lib.rs  objective.rs
crates/panopticon-permissions/: Cargo.toml
crates/panopticon-permissions/src/: attenuation.rs  evaluator.rs  level.rs  lib.rs
crates/panopticon-reputation/: Cargo.toml
crates/panopticon-reputation/src/: engine.rs  lib.rs  score.rs
crates/panopticon-security/: Cargo.toml
crates/panopticon-security/src/: circuit_breaker.rs  detector.rs  lib.rs
crates/panopticon-server/: Cargo.toml
crates/panopticon-server/examples/: basic_delegation.rs
crates/panopticon-server/src/: handlers.rs  main.rs  state.rs
crates/panopticon-server/tests/: delegation_lifecycle.rs
crates/panopticon-types/: Cargo.toml
crates/panopticon-types/src/: agent.rs  contract.rs  error.rs  lib.rs  task.rs
crates/panopticon-verification/: Cargo.toml
crates/panopticon-verification/src/: credential.rs  dispute.rs  lib.rs  traits.rs
crates/panopticon-verification/src/verifiers/: cryptographic.rs  direct.rs  game_theoretic.rs  third_party.rs
src/: config.rs  lib.rs  main.rs
src/assignment/: bid.rs  contract_builder.rs  matcher.rs  mod.rs
src/cli/: mod.rs  state.rs
src/cli/commands/: agent.rs  config.rs  demo.rs  execute.rs  mod.rs  plan.rs  status.rs  task.rs
src/coordination/: coordinator.rs  trigger.rs
src/decomposition/: proposal.rs  strategy.rs  traits.rs
src/executor/: claude.rs  mod.rs
src/ledger/: memory.rs  merkle.rs  mod.rs  traits.rs
src/monitoring/: monitor.rs  slo.rs
src/optimizer/: pareto.rs
src/permissions/: attenuation.rs  evaluator.rs  level.rs
src/persistence/: mod.rs  store.rs
src/repl/: mod.rs  output.rs  router.rs  session.rs  slash.rs
src/reputation/: engine.rs  score.rs
src/security/: circuit_breaker.rs  detector.rs  threat.rs
src/types/: error.rs  task.rs
src/verification/: credential.rs  dispute.rs  traits.rs
src/verification/verifiers/: cryptographic.rs  direct.rs  game_theoretic.rs  mod.rs  third_party.rs
