[package]
name = "panopticon"
version = "0.1.0"
description = "Panopticon — intelligent AI delegation framework"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kaito2/panopticon"

[lib]
name = "panopticon"
path = "src/lib.rs"

[[bin]]
name = "panopticon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Concurrent data structures
dashmap = "6"

# Cryptography
sha2 = "0.10"
rs_merkle = "1"
ed25519-dalek = { version = "2", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
