[package]
name = "panopticon-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "panopticon"
path = "src/main.rs"

[dependencies]
panopticon-types = { workspace = true }
panopticon-ledger = { workspace = true }
panopticon-decomposition = { workspace = true }
panopticon-reputation = { workspace = true }
panopticon-assignment = { workspace = true }
panopticon-optimizer = { workspace = true }
panopticon-monitoring = { workspace = true }
panopticon-coordination = { workspace = true }
panopticon-verification = { workspace = true }
panopticon-security = { workspace = true }
panopticon-permissions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
