[package]
name = "panopticon-ledger"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["memory-ledger"]
memory-ledger = ["dep:tokio"]
merkle-ledger = ["dep:rs_merkle", "dep:sha2"]

[dependencies]
panopticon-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, optional = true, features = ["sync"] }
rs_merkle = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
