[package]
name = "panopticon-reputation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
panopticon-types = { workspace = true }
panopticon-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
