[package]
name = "panopticon-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
